--- a/task_2/requirements.txt
+++ b/task_2/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 flake8==6.0.0
 idna==3.4
+isort==5.12.0
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
@@ -23,6 +24,7 @@ pycodestyle==2.10.0
 pycparser==2.21
 pyflakes==3.0.1
 PyJWT==2.6.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.28.2
